--- a/components/reusable-components/reusable-form/reusableForm.module.scss
+++ b/components/reusable-components/reusable-form/reusableForm.module.scss
@@ -72,6 +72,7 @@
 
       button {
         width: 100%;
+        max-height: 48px;
       }
     }
   }
